# agro-iot-unla-fiuba

./: .gitignore  README.md
agroecologia-iot-dispositivo/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  README.md  config.c.sample  config.h.sample  sdkconfig
agroecologia-iot-dispositivo/main/: CMakeLists.txt  command_processor.c  command_processor.h  config_example.c  config_example.h  data_transmitter.c  data_transmitter.h  main.c  rtc_config.c  rtc_config.h  sensor_manager.c  sensor_manager.h  timed_outputs.c  timed_outputs.h  wifi.c  wifi.h
agroecologia-iot-dispositivo/main/adc/ads1115/: ads1115.c  ads1115.h
agroecologia-iot-dispositivo/main/sensors/dht22/: dht22.c  dht22.h
agroecologia-iot-dispositivo/main/sensors/mock/: mock_sensor.c  mock_sensor.h
agroecologia-iot-dispositivo/main/sensors/soil_moisture/: soil_moisture.c  soil_moisture.h
device-schematic/: schematic.brd  schematic.sch
iot-src/: .gitignore  README.md  docker-compose.yml
iot-src/db/dumps/: init.sql
iot-src/db/init/: init.sql
iot-src/logical-layer/backend/node/: index.js  mysql-connector.js  package-lock.json  package.json
iot-src/node/: index.js  mysql-connector.js  package-lock.json  package.json
iot-src/react/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
iot-src/react/public/: index.html
iot-src/react/src/: index.tsx
iot-src/spring-agroecologia-iot/: .gitignore  Dockerfile  README.md  pom.xml
moquitto-docker/: README.md  docker-compose.yml
moquitto-docker/config/: mosquitto.conf  mosquitto.passwd
(+147 files in other folders)
